Bug 10346 - void tevent_epoll_set_panic_fallback tries to return a value
Summary: void tevent_epoll_set_panic_fallback tries to return a value
Status: RESOLVED FIXED
Alias: None
Product: TALLOC
Classification: Unclassified
Component: libtalloc (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal
Target Milestone: ---
Assignee: Simo Sorce
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-25 16:07 UTC by herwin
Modified: 2013-12-26 17:43 UTC (History)
0 users

See Also:


Attachments
Remove return value from void tevent_epoll_set_panic_fallback (358 bytes, patch)
2013-12-25 16:07 UTC, herwin
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description herwin 2013-12-25 16:07:22 UTC
Created attachment 9548 [details]
Remove return value from void tevent_epoll_set_panic_fallback

(The category is most likely wrong, but there is no tevent category. Since the page for tevent states "Tevent is an event system based on the talloc memory management library." I put the bug in the talloc category)


lib/tevent/tevent_epoll.c contains the definition "_PRIVATE_ void tevent_epoll_set_panic_fallback(...)" Since this is a void function, it should not try to return a value.

Attached is a simple patch to fix this.
Comment 1 Simo Sorce 2013-12-26 04:25:21 UTC
Sent patch to master for review and push.
Comment 2 Simo Sorce 2013-12-26 04:26:04 UTC
Heh, I meant: sent to 'samba-technical' :)
Happy holidays.